# contextops

./: .gitignore  CHANGELOG.md  HOW_TO_GET_JSON.md  LICENSE  README.md  STABILITY.md  USER_GUIDE.md  output1.txt  output2.txt  output3.txt  pyproject.toml  test_duplicate.json
.github/workflows/: ci.yml  contextops.yml  deploy_pages.yml
ContextBench/: README.md  contextbench_v1_healthy_architectures.jsonl  contextbench_v1_temporal_drift.jsonl
benchmarks/: 01_simple_redundancy.json  02_semantic_duplicates.json  03_rag_overload.json  04_agent_trace_noise.json  05_structured_data_case.json  06_fake_good_context.json  07_instruction_conflict.json  diff_case_a.json  diff_case_b.json  run_benchmarks.py
contextops/: __init__.py
contextops/analyzers/: density.py  redundancy.py  structure.py  tokens.py
contextops/api/: diff.py  inspect.py  stability.py
contextops/cli/: main.py  renderer.py
contextops/core/: config.py  engine.py  models.py  normalizer.py  roast.py  telemetry.py
contextops/integrations/: __init__.py
examples/: README.md  quickstart_rag.py
experiments/: exp6_ci_cd_demo.py
leaderboard/harness/: evaluate.py
leaderboard/website/: package-lock.json  (+2 more)
scenarios/: scenario1_boilerplate.json  scenario2_tool_sprawl.json  scenario3_overlapping_retrieval.json
scripts/: calibrate_quality_floor.py  calibration_results.json  compute_snapshots.py  evaluate_contextops.py  generate_all.py  generate_chaos.py  generate_phase2_healthy.py  generate_phase3_failures.py  generate_phase4_sec.py  generate_phase5_temporal.py
tests/: test_api.py  test_archetypes.py  test_benchmarks.py  test_chaos.py  test_cli_commands.py  test_density.py  test_diff.py  test_lsh_verification.py  test_normalizer.py  test_redundancy.py  test_schema.py  test_signal_contract.py  test_structure.py  test_telemetry.py  test_tokens.py
(+18 files in other folders)
