[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "contextops"
version = "0.2.2"
description = "Deterministic context linter for LLM applications — analyze, score, and optimize your LLM context payloads."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    {name = "Abhijeet Baug"},
]
keywords = [
    "llm", "context", "observability", "rag", "token",
    "optimization", "linter", "ci", "deterministic", "prompt-engineering",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
    "Typing :: Typed",
]

dependencies = [
    "tiktoken>=0.5.0",
    "click>=8.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
]

[project.urls]
Homepage = "https://github.com/Abhijeet777/contextops"
Repository = "https://github.com/Abhijeet777/contextops"
Issues = "https://github.com/Abhijeet777/contextops/issues"
Documentation = "https://github.com/Abhijeet777/contextops#readme"
Changelog = "https://github.com/Abhijeet777/contextops/blob/main/CHANGELOG.md"

[project.scripts]
contextops = "contextops.cli.main:cli"

[tool.setuptools.packages.find]
include = ["contextops*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

